Correctif icône dans un bouton IE
- Bordel ! Je savais que ça allait merder !

--- a/web-resources/src/main/resources/css/loap-main.css
+++ b/web-resources/src/main/resources/css/loap-main.css
@@ -1174,7 +1174,8 @@ a.icon.active:not(.button):not(.disabled):not(.no-bg) > .text {color: white;}
 */
 
 /* Javascript Mouse Events Fixes */
-.icon:after {
+a.icon:after,
+button.icon:after {
   content: ''; /* CSS Cover Fix */
   position: absolute;
   top: 0;
@@ -1182,7 +1183,8 @@ a.icon.active:not(.button):not(.disabled):not(.no-bg) > .text {color: white;}
   width: 100%;
   height: 100%;
 }
-.icon > svg {
+a.icon > svg,
+button.icon > svg {
   pointer-events: none; /* Pointer Events Fix */
 }
 
